--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,109 @@
-autogen==1.0.16
-jsonlines==3.1.0
-matplotlib==3.7.1
-numpy==1.24.3
-openai==1.7.2
-pandas==2.1.4
-pyautogen==0.2.0
-python_Levenshtein==0.23.0
-seaborn==0.13.1
-termcolor==2.4.0
-wolframalpha==5.0.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.11.0
+attrs==25.4.0
+autogen-agentchat==0.7.5
+autogen-core==0.7.5
+blis==1.3.0
+catalogue==2.0.10
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+cloudpathlib==0.23.0
+confection==0.1.5
+context-cite==0.0.4
+contourpy==1.3.3
+cycler==0.12.1
+cymem==2.0.11
+datasets==4.4.1
+dill==0.4.0
+diskcache==5.6.3
+distro==1.9.0
+docker==7.1.0
+filelock==3.20.0
+FLAML==2.3.6
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2025.10.0
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.36.0
+idna==3.11
+importlib_metadata==8.7.0
+jaraco.context==6.0.1
+Jinja2==3.1.6
+jiter==0.11.1
+joblib==1.5.2
+jsonlines==4.0.0
+jsonref==1.1.0
+kiwisolver==1.4.9
+Levenshtein==0.27.3
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+more-itertools==10.8.0
+mpmath==1.3.0
+multidict==6.7.0
+multiprocess==0.70.18
+murmurhash==1.0.13
+networkx==3.5
+nltk==3.9.2
+numpy==1.26.4
+openai==2.6.1
+opentelemetry-api==1.38.0
+packaging==25.0
+pandas==2.3.3
+pillow==12.0.0
+preshed==3.0.10
+propcache==0.4.1
+protobuf==5.29.5
+pyarrow==22.0.0
+pyautogen==0.2.35
+pydantic==2.12.3
+pydantic_core==2.41.4
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+RapidFuzz==3.14.3
+regex==2025.10.23
+requests==2.32.5
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.3
+seaborn==0.13.2
+setuptools==80.9.0
+six==1.17.0
+smart_open==7.4.4
+sniffio==1.3.1
+spacy==3.8.8
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+sympy==1.14.0
+termcolor==3.2.0
+thinc==8.3.8
+threadpoolctl==3.6.0
+tiktoken==0.12.0
+tokenizers==0.22.1
+torch==2.9.0
+tqdm==4.67.1
+transformers==4.57.1
+typer-slim==0.20.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+wasabi==1.1.3
+weasel==0.4.2
+wheel==0.45.1
+wolframalpha==5.1.3
+wrapt==2.0.1
+xmltodict==1.0.2
+xxhash==3.6.0
+yarl==1.22.0
+zipp==3.23.0
